Question Type Span colour in css styled

--- a/public/admin/assets/css/style.css
+++ b/public/admin/assets/css/style.css
@@ -19,6 +19,12 @@ body {
   color: #444444;
 }
 
+.active{
+    background: #A7F3D0;font-size:90%;
+    border-radius: 0.125rem;
+    padding: 0.25rem 0.75rem;
+}
+
 a {
   color: #4154f1;
   text-decoration: none;
